tests/NormalTests/paczka2/big_fuzzy/67870380.err
Error in line 16: YHKOagx A601 85,4
Error in line 23: YHKOagx A396 2,2
Error in line 29: YHKOagx A601 29,0
Error in line 18: A269 A396 56,9
Error in line 30: YHKOagx A396 35,1
Error in line 47: YHKOagx A601 91,6
Error in line 54: YHKOagx A269 37,3
Error in line 37: 9lBvh6W A269 42,7
Error in line 59: YHKOagx A396 11,9
Error in line 61: 9lBvh6W A601 1,8
Error in line 67: 9lBvh6W A121 38,2
Error in line 73: BTupcQ A601 86,9
Error in line 71: 9lBvh6W A269 72,0
Error in line 84: A269 A269 100,60
Error in line 72: A269 A121 87,6
Error in line 83: AKSk88 A269 60,7
Error in line 85: A269 A269 199,0
Error in line 81: 9lBvh6W A121 79,8
Error in line 92: 9lBvh6W A269 27,9
Error in line 90: BTupcQ A269 58,3
Error in line 102: 9lBvh6W A121 98,5
Error in line 107: x4zbQfwHgN1 A396 70,5
Error in line 135: BTupcQ A601 1,6
Error in line 144: 9lBvh6W A121 74,9
Error in line 156: i42si5zkjtz A396 96,6
Error in line 158: i42si5zkjtz A601 43,6
Error in line 154: BTupcQ A269 19,1
Error in line 165: 9lBvh6W A396 37,39
Error in line 159: i42si5zkjtz A396 66,6
Error in line 166: i42si5zkjtz A269 56,5
Error in line 186: BTupcQ A121 62,4
Error in line 157: AKSk88 A601 26,2
Error in line 206: YHKOagx A269 67,2
Error in line 211: BTupcQ A269 27,4
Error in line 221: 9lBvh6WA39614,5
Error in line 228: AKSk88 A601 72,9
Error in line 232: YHKOagx A121 56,4
Error in line 240: BTupcQ A396 31,0
